--- a/app/src/main/assets/error.html
+++ b/app/src/main/assets/error.html
@@ -2,8 +2,18 @@
 <html>
 	<head>
 		<title>Error!</title>
+		<style>
+			body{
+				background-color: black;
+				color: lime;
+				font-family: courier;
+				padding: 20%;
+			}
+		</style>
+		
 	</head>
 	<body>
-		<p>This is an error page.</p>
+		<h1>Ooops... No connection!</h1>
+		<p>Something bad happened. Try to close this app and restart it. If this happen again, contact us.</p>
 	</body>
 </html>
